# gsd-sys

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  wrapper.h
libgsd/: CMakeLists.txt  LICENSE  gsd.c  gsd.h
src/: bindings.rs  lib.rs
