[package]
name = "gsd-sys"
version = "0.1.0"
authors = ["Ian Graham"]
edition = "2018"
build = "build.rs"
description = "Bindings to GSD's C API"
license = "MIT"
keywords = ["gsd", "hoomd", "md", "io", "ffi"]

[lib]
name = "gsd_sys"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8.4"

[build-dependencies]
bindgen = "*"
cmake = "0.1.31"
