[package]
name = "gsd-sys"
version = "0.0.2"
authors = ["Ian Graham"]
edition = "2021"
build = "build.rs"
description = "Bindings to GSD's C API"
license = "MIT"
keywords = ["gsd", "hoomd", "md", "io", "ffi"]

[lib]
name = "gsd_sys"
path = "src/lib.rs"

# TODO - add optional feature to rebuild wrapper locally

[dev-dependencies]
rand = "0.8.4"

[build-dependencies]
bindgen = "0.60"
cmake = "0.1"
